--- a/reset.css
+++ b/reset.css
@@ -1,8 +1,12 @@
-* {
+*,
+:before,
+:after {
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
+}
 
+* {
   background: transparent;
   color: inherit;
   font-family: inherit;
