--- a/_strict-reset.scss
+++ b/_strict-reset.scss
@@ -1,7 +1,7 @@
 *,
 :before,
 :after {
-  @include box-sizing(border-box);
+  box-sizing: border-box;
 }
 
 * {
@@ -65,8 +65,7 @@ q:after {
 }
 
 hr {
-  @include box-sizing(content-box);
-
+  box-sizing: content-box;
   height: 0;
 }
 
